# picaf

./: README-pypi.md  README.md  setup.cfg
.github/: FUNDING.yml
.github/workflows/: tests.yaml
picaf/: file_finder.py  main.py
tests/: test_file_finder.py
