[metadata]
name = picaf
version = 0.5.0
description = Show the window that allows you to click filenames, which are picked up by scanning input text file.
long_description = file: README-pypi.md
long_description_content_type = text/markdown
url = https://github.com/tos-kamiya/picaf
author = Toshihiro Kamiya
author_email = kamiya@mbj.nifty.com
license = BSD 2-Clause License
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux

[options]
packages = find:
install_requires = 
  pyautogui
  PySimpleGUI
python_requires = >= 3.8

[options.entry_points]
console_scripts = 
    picaf = picaf.main:main
